<resources>
    <string name="app_name">Position Tracker</string>
    <string name="title_activity_maps">Map</string>
    <string name="api_key">AIzaSyC_6-Bieq7ovetzGt_nwsRfHLBBNICruPQ</string>
    <string name="get_current_position">get current position</string>
    <string name="record_my_position">Record my position:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="dots">...</string>
    <string name="show_my_locations">SHOW MY LOCATIONS OVER PERIOD</string>
    <string name="show_notification">SHOW ME NOTIFICATION</string>
    <string name="submit">SUBMIT</string>
    <string name="send_results">SEND RESULTS BY E-MAIL</string>
    <string name="notification_period">In the same place for: </string>
    <string name="_1_00">1:00</string>
</resources>
